--- a/docs/tutorial/index.jade
+++ b/docs/tutorial/index.jade
@@ -32,6 +32,7 @@
       $ git clone https://github.com/ringcentral-tutorials/sms-api-nodejs-demo
       $ cd sms-api-nodejs-demo
       $ cp .env.sample .env
+      $ npm install --save
       ```
 
       Specify your app client id and client secret as well as the account login credentials to the constants defined in the .env file.
