--- a/docs/tutorial/index.jade
+++ b/docs/tutorial/index.jade
@@ -44,7 +44,7 @@
     :markdown
       ## Sending an SMS message
 
-      Let's create a file named `send-sms.js` as shown on the right-hand side pane.
+      Let's create a file named `send-sms.js`.
 
       It is very convenient to access RingCentral platform using the [RingCentral JS SDK](https://github.com/ringcentral/ringcentral-js).
 
@@ -135,7 +135,7 @@
 
       We parse the response to get an array of records. We iterate thru the `records` array, read the message id of each message, and use the id to create an endpoint to access that message.
 
-      To change the message read status, we set `readStatus` to "Read", then call the `platform.put("/account/~/extension/~/message-store/${record.id}"` to change the `readStatus` of that message.
+      To change the message `readStatus` to "Read", we set `readStatus` to "Read", then call the `platform.put("/account/~/extension/~/message-store/${record.id}"` to change the `readStatus` of that message.
 
       Let's try it out. Go to the Terminal window and run `node retrieve-modify.js`.
 
@@ -160,9 +160,9 @@
 .chapter(data-title='Receive - Reply to SMS messages')
   .step(data-title='Receiving SMS messages', data-file='../receive-reply.js', data-highlight='19-45')
     :markdown
-      In this step, you will learn how to listen to incoming SMS messages and new voicemail message, then reply with an SMS message to the sender of that incoming message or incoming call.
+      In this step, you will learn how to listen to incoming SMS messages and new voicemail messages, then reply with an SMS message to the sender of that incoming message or incoming call.
 
-      ### Listen to incoming SMS messages and incoming calls
+      ### Listen to incoming SMS and new voicemail messages
 
       Let's create a file named `receive-reply.js`.
 
