--- a/docs/tutorial/index.jade
+++ b/docs/tutorial/index.jade
@@ -82,7 +82,7 @@
 
       First, we define the `body` variable, specify the `from`, the `to` and the `text` parameters. Then we append the `body` to the `FormData`.
 
-      Then, we load the image and append the image attachment as shown on the right-hand site pane.
+      Then, we load the image and append the image attachment as shown on the right-hand side pane.
 
       Finally, we call the `platform.post('/account/~/extension/~/sms', formData)` method to send the message.
 
